[gd_scene load_steps=62 format=2]

[ext_resource path="res://Living/Player/Assets/Player Idle.png" type="Texture" id=1]
[ext_resource path="res://Living/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Living/Player/Assets/Player Run.png" type="Texture" id=4]
[ext_resource path="res://Living/Player/Assets/Player Running Jump.png" type="Texture" id=5]
[ext_resource path="res://Living/Player/Assets/Player Jump.png" type="Texture" id=6]
[ext_resource path="res://Living/Player/Assets/Player Fall.png" type="Texture" id=7]
[ext_resource path="res://Util/FrameCounter.gd" type="Script" id=8]
[ext_resource path="res://Living/Player/Assets/Player Slide.png" type="Texture" id=9]
[ext_resource path="res://Living/Player/Assets/SFX/sfx.tscn" type="PackedScene" id=10]
[ext_resource path="res://Living/Player/Assets/Sword Swing - Empty.png" type="Texture" id=12]
[ext_resource path="res://Living/Player/Assets/Sword Swing 2.png" type="Texture" id=13]
[ext_resource path="res://Living/Player/Assets/Sword Swing.png" type="Texture" id=14]
[ext_resource path="res://VFX/Shaders/Glow.shader" type="Shader" id=15]
[ext_resource path="res://Living/Player/Assets/firebolt.png" type="Texture" id=16]
[ext_resource path="res://VFX/Particles/Assets/static.png" type="Texture" id=17]
[ext_resource path="res://AttackProperties/Hitbox/Hitbox.gd" type="Script" id=18]
[ext_resource path="res://AttackProperties/AttackProperties.gd" type="Script" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 45 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 45 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 59 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 59 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 59 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 59 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 7 )
region = Rect2( 0, 59, 64, 59 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 64, 59, 64, 59 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 7 )
region = Rect2( 128, 59, 64, 59 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 7 )
region = Rect2( 0, 118, 64, 59 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 7 )
region = Rect2( 64, 118, 64, 59 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 7 )
region = Rect2( 128, 118, 64, 59 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 0, 59, 64, 59 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 64, 59, 64, 59 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 128, 59, 64, 59 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 192, 59, 64, 59 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 0, 118, 64, 59 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 64, 118, 64, 59 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 128, 118, 64, 59 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 192, 118, 64, 59 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 59 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "slide",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "jump",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "run jump",
"speed": 10.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": false,
"name": "fall",
"speed": 8.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": false,
"name": "run start",
"speed": 10.0
} ]

[sub_resource type="Resource" id=44]
script = ExtResource( 19 )
damage = 1
knockback = Vector2( 0, 0 )
knockback_overwrites_motion = true
type = 1
can_dodge = true
can_parry = true

[sub_resource type="ConvexPolygonShape2D" id=45]
points = PoolVector2Array( -20, -50, 150, -80, 200, 0, 150, 80, -20, 50, -40, 0 )

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 12 ) ],
"loop": false,
"name": "attack1",
"speed": 60.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": false,
"name": "attack2",
"speed": 60.0
} ]

[sub_resource type="RectangleShape2D" id=39]
extents = Vector2( 20, 40 )

[sub_resource type="Animation" id=40]
resource_name = "dash"
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Dash/Fireball:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.116667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dash/Fireball:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.116667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Dash/Fireball:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.116667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -96, -160 ), Vector2( -96, -380 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Dash/Static:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Dash/Static:speed_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0 ]
}

[sub_resource type="ShaderMaterial" id=41]
shader = ExtResource( 15 )
shader_param/color = Color( 0, 0.0313726, 0.501961, 1 )
shader_param/glow = Color( 0.247059, 0.921569, 0.870588, 1 )
shader_param/brightness = 4.5

[sub_resource type="CanvasItemMaterial" id=42]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 20
particles_anim_loop = true

[sub_resource type="ParticlesMaterial" id=43]
emission_shape = 2
emission_box_extents = Vector3( 50, 50, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 185.8
angle_random = 1.0
color = Color( 0.8, 2.1, 3, 1 )
anim_offset = 1.0
anim_offset_random = 1.0

[node name="Player" type="KinematicBody2D" groups=[
"players",
]]
collision_layer = 14
script = ExtResource( 2 )
hookPath = "res://Living/Player/Tools/Grappling Hook/Hook.tscn"

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12 )
shape = SubResource( 1 )

[node name="CrouchHitbox" type="CollisionShape2D" parent="."]
modulate = Color( 0.219608, 1, 0, 1 )
position = Vector2( 0, 47 )
shape = SubResource( 2 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )
smoothing_enabled = true

[node name="StandingHitboxArea" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StandingHitboxArea"]
position = Vector2( 0, 12 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -2.5 )
scale = Vector2( 2, 2 )
frames = SubResource( 36 )
animation = "run start"
frame = 2
playing = true

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 18 )
properties = SubResource( 44 )
trigger_type = 1
active = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 45 )

[node name="AttackSprite" type="AnimatedSprite" parent="AttackArea"]
position = Vector2( 98.3977, 0.868629 )
scale = Vector2( 2.33239, 1.98604 )
frames = SubResource( 38 )
animation = "attack2"

[node name="WallJump" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallJump"]
position = Vector2( 30, 0 )
shape = SubResource( 39 )

[node name="sfx" parent="." instance=ExtResource( 10 )]
position = Vector2( 30, -90 )

[node name="FrameCounters" type="Node" parent="."]

[node name="JumpGrace" type="Node" parent="FrameCounters"]
script = ExtResource( 8 )
activeFrames = 8

[node name="AttackStartup" type="Node" parent="FrameCounters"]
script = ExtResource( 8 )
activeFrames = 3

[node name="AttackCooldown" type="Node" parent="FrameCounters"]
script = ExtResource( 8 )
activeFrames = 30

[node name="DamageInvincibility" type="Node" parent="FrameCounters"]
script = ExtResource( 8 )
activeFrames = 60

[node name="ComboTimer" type="Node" parent="FrameCounters"]
script = ExtResource( 8 )
activeFrames = 300

[node name="Parry" type="Node" parent="FrameCounters"]
script = ExtResource( 8 )
activeFrames = 10

[node name="WallJump" type="Node" parent="FrameCounters"]
script = ExtResource( 8 )
activeFrames = 10

[node name="HookAttack" type="Node" parent="FrameCounters"]
script = ExtResource( 8 )
activeFrames = 10

[node name="Dodge" type="Node" parent="FrameCounters"]
script = ExtResource( 8 )
activeFrames = 30

[node name="DodgeCooldown" type="Node" parent="FrameCounters"]
script = ExtResource( 8 )
activeFrames = 15

[node name="SlideCooldown" type="Node" parent="FrameCounters"]
script = ExtResource( 8 )
activeFrames = 30

[node name="VFX" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="VFX"]
anims/dash = SubResource( 40 )

[node name="Dash" type="Node2D" parent="VFX"]

[node name="Fireball" type="TextureRect" parent="VFX/Dash"]
visible = false
material = SubResource( 41 )
margin_left = -96.0
margin_top = -380.0
margin_right = 104.0
margin_bottom = 20.0
rect_scale = Vector2( 1, 3 )
texture = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Static" type="Particles2D" parent="VFX/Dash"]
material = SubResource( 42 )
emitting = false
amount = 3
lifetime = 0.04
randomness = 0.63
process_material = SubResource( 43 )
texture = ExtResource( 17 )
[connection signal="hit" from="AttackArea" to="." method="_on_hit_with_sword"]
[connection signal="finished" from="FrameCounters/Dodge" to="." method="_on_dodge_finished"]
