[gd_scene load_steps=33 format=2]

[ext_resource path="res://Player/Assets/Player Idle.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/InputBuffer.gd" type="Script" id=3]
[ext_resource path="res://Player/Assets/Player Run.png" type="Texture" id=4]
[ext_resource path="res://Player/Assets/Player Running Jump.png" type="Texture" id=5]
[ext_resource path="res://Player/Assets/Player Jump.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.0
height = 100.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 19.2132
height = 59.206

[sub_resource type="CapsuleShape2D" id=3]
radius = 20.0
height = 100.0

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 59 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 59 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 59 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 59 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 64, 59 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 59, 64, 59 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 64, 59, 64, 59 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 128, 59, 64, 59 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 192, 59, 64, 59 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 0, 118, 64, 59 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 64, 118, 64, 59 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 128, 118, 64, 59 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 192, 118, 64, 59 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "run start",
"speed": 10.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "run jump",
"speed": 10.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": false,
"name": "jump",
"speed": 10.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 454.779, 295.603 )
collision_layer = 2
script = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -0.56134, 9.86664 )
shape = SubResource( 1 )

[node name="CrouchHitbox" type="CollisionShape2D" parent="."]
position = Vector2( -0.56134, 30.8666 )
shape = SubResource( 2 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -0.735046, 2.94037 )
current = true
zoom = Vector2( 2, 2 )

[node name="InputBuffer" type="Node" parent="."]
script = ExtResource( 3 )

[node name="StandingHitboxArea" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StandingHitboxArea"]
position = Vector2( -1.16724, 9.02786 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.228729, -9.45526 )
scale = Vector2( 3, 3 )
frames = SubResource( 23 )
animation = "idle"
frame = 1
playing = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="onAnimationFinished"]
